@@ -1,0 +1,100 @@
+{
+  "data": [
+    {
+      "timestamp": "2016-11-15T00:00:00+02:00",
+      "value": null
+    },
+    {
+      "timestamp": "2016-11-15T01:00:00+02:00",
+      "value": null
+    },
+    {
+      "timestamp": "2016-11-15T02:00:00+02:00",
+      "value": null
+    },
+    {
+      "timestamp": "2016-11-15T03:00:00+02:00",
+      "value": 0
+    },
+    {
+      "timestamp": "2016-11-15T04:00:00+02:00",
+      "value": 0
+    },
+    {
+      "timestamp": "2016-11-15T05:00:00+02:00",
+      "value": 0
+    },
+    {
+      "timestamp": "2016-11-15T06:00:00+02:00",
+      "value": 0
+    },
+    {
+      "timestamp": "2016-11-15T07:00:00+02:00",
+      "value": 0
+    },
+    {
+      "timestamp": "2016-11-15T08:00:00+02:00",
+      "value": 0.002
+    },
+    {
+      "timestamp": "2016-11-15T09:00:00+02:00",
+      "value": 16.331
+    },
+    {
+      "timestamp": "2016-11-15T10:00:00+02:00",
+      "value": 46.239
+    },
+    {
+      "timestamp": "2016-11-15T11:00:00+02:00",
+      "value": 107.824
+    },
+    {
+      "timestamp": "2016-11-15T12:00:00+02:00",
+      "value": 126.199
+    },
+    {
+      "timestamp": "2016-11-15T13:00:00+02:00",
+      "value": 197.84
+    },
+    {
+      "timestamp": "2016-11-15T14:00:00+02:00",
+      "value": 222.91
+    },
+    {
+      "timestamp": "2016-11-15T15:00:00+02:00",
+      "value": 171.465
+    },
+    {
+      "timestamp": "2016-11-15T16:00:00+02:00",
+      "value": 187.686
+    },
+    {
+      "timestamp": "2016-11-15T17:00:00+02:00",
+      "value": 242.718
+    },
+    {
+      "timestamp": "2016-11-15T18:00:00+02:00",
+      "value": 339.587
+    },
+    {
+      "timestamp": "2016-11-15T19:00:00+02:00",
+      "value": 504.723
+    },
+    {
+      "timestamp": "2016-11-15T20:00:00+02:00",
+      "value": 382.698
+    },
+    {
+      "timestamp": "2016-11-15T21:00:00+02:00",
+      "value": 280.27
+    },
+    {
+      "timestamp": "2016-11-15T22:00:00+02:00",
+      "value": 99.947
+    },
+    {
+      "timestamp": "2016-11-15T23:00:00+02:00",
+      "value": 21.204
+    }
+  ]
+}
