@@ -34,3 +34,4 @@
 2022-11-30: Add startedAt property for Alarm
 2022-12-08: Add Yield lose endpoints
 2023-03-21: Add new property DueDate to work order
+2023-09-07: Add satellite irradiance endpoint
